--- a/artifex-site/src/index.css
+++ b/artifex-site/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/helvetica-world");
+/* @import url("https://fonts.cdnfonts.com/css/helvetica-world"); */
 /*! tailwindcss v4.1.3 | MIT License | https://tailwindcss.com */
 @layer properties {
   @supports (((-webkit-hyphens: none)) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color: rgb(from red r g b)))) {
@@ -2058,7 +2058,7 @@
 
 html {
   font-size: var(--font-size);
-  font-family: Helvetica World, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
+  font-family: Quicksand, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
 }
 
 @property --tw-translate-x {
