--- a/artifex-site/src/styles/globals.css
+++ b/artifex-site/src/styles/globals.css
@@ -184,9 +184,10 @@
   }
 }
 
-@import url('https://fonts.cdnfonts.com/css/helvetica-world');
+/* Removido import da Helvetica World que é paga */
+/* @import url('https://fonts.cdnfonts.com/css/helvetica-world'); */
 
 html {
   font-size: var(--font-size);
-  font-family: 'Helvetica World', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
 }
